# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
page_analyzer/: app.py
page_analyzer/templates/: index.html  url_detail.html  urls.html
tests/: test_parsing.py  test_validation.py
