[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitry Yarinsky"]

[project]
name = "hexlet-code"
version = "0.1.0"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.0",
    "gunicorn==22.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "python-dotenv==1.0.0",
    "flake8==6.1.0"
]