[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitry Yarinsky"]

[project]
name = "hexlet-code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.0",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "python-dotenv==1.0.1",
    "psycopg2-binary==2.9.10",
    "flake8==7.1.2",
    "validators==0.34.0"
]